# MACROdoctest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doctest_checks.h  index.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: configure.sh
src/: CMakeLists.txt  doctest_checks.h
test/: doctest_checks.cpp  matrix.h
