CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

# Set project settings
PROJECT(MacroDoctestTest)

# Specify the C++11 standard
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# Include the doctest library
ADD_SUBDIRECTORY(src)

# Iterate over the MACRO_DOCTEST_TEST_SOURCES
SET(CPP_TEST_FILE "test/doctest_checks.cpp")
GET_FILENAME_COMPONENT(CPP_TEST_FILE ${CPP_TEST_FILE} REALPATH)

# Retrieving doctest library
GET_PROPERTY(DOCTEST_INCLUDE_DIR GLOBAL PROPERTY GLOBAL_DOCTEST_INCLUDE_DIR)
GET_PROPERTY(DOCTEST_LIBRARIES GLOBAL PROPERTY GLOBAL_DOCTEST_LIBRARIES)

# Compile the test
ADD_EXECUTABLE(TestDoctestChecks "${CPP_TEST_FILE}")
TARGET_INCLUDE_DIRECTORIES(TestDoctestChecks PUBLIC ${DOCTEST_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(TestDoctestChecks PRIVATE ${DOCTEST_LIBRARIES})

# Install files
SET(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/bin" CACHE PATH "Default Install path" FORCE)
MESSAGE(STATUS "Destination of the installation: ${CMAKE_INSTALL_PREFIX}")
IF(NOT EXISTS ${CMAKE_INSTALL_PREFIX})
  FILE(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX})
ENDIF(NOT EXISTS ${CMAKE_INSTALL_PREFIX})
INSTALL(TARGETS TestDoctestChecks COMPONENT DESTINATION ${CMAKE_INSTALL_PREFIX})

# Adding test
ADD_TEST(
    NAME TestDoctestChecks
    COMMAND TestDoctestChecks
    WORKING_DIRECTORY ${CMAKE_INSTALL_PREFIX}
)
